--- a/frontend/panorama.html
+++ b/frontend/panorama.html
@@ -136,12 +136,20 @@
             color: #2d5c2f !important;
             background: #baffba !important;
         }
-        .dark-theme .limpar-btn, .dark-theme .imprimir-btn {
+        .dark-theme .imprimir-btn,
+        .dark-theme .imprimir-btn.btn-success,
+        .dark-theme .btn.imprimir-btn,
+        .dark-theme .btn-success.imprimir-btn {
             border: 1.5px solid #baffba !important;
             color: #baffba !important;
             background: transparent !important;
         }
-        .dark-theme .imprimir-btn:hover, .dark-theme .imprimir-btn:focus, .dark-theme .imprimir-btn:active {
+        .dark-theme .imprimir-btn:hover,
+        .dark-theme .imprimir-btn:focus,
+        .dark-theme .imprimir-btn:active,
+        .dark-theme .imprimir-btn.btn-success:hover,
+        .dark-theme .imprimir-btn.btn-success:focus,
+        .dark-theme .imprimir-btn.btn-success:active {
             border: 1.5px solid #baffba !important;
             color: #baffba !important;
             background: #23272b !important;
@@ -249,6 +257,18 @@
           .limpar-btn {
             display: none !important;
           }
+          #logo-superend,
+          body > div[style*="position:sticky"],
+          #btn-theme-toggle {
+            display: none !important;
+          }
+          /* Esconde o fundo branco do container, mas mantém o conteúdo */
+          .container {
+            background: none !important;
+            box-shadow: none !important;
+            border-radius: 0 !important;
+            padding: 0 !important;
+          }
         }
     </style>
     <style id="dark-theme-style" disabled>
@@ -348,11 +368,11 @@
     </div>
     <div class="container"; style="background: #ffffff00;">
         <div style="display:flex; align-items:flex-start; justify-content:space-between; margin-bottom:18px; margin-top:-10px; gap:16px;">
-            <div class="panorama-title" style="margin:0; text-align:left; flex:1; background:transparent !important;">PANORAMA MENSAL RESUMIDO</div>
+            <h2 style="color: #2d5c2f;">PANORAMA MENSAL RESUMIDO</h2>
             <div style="display:flex; flex-direction:column; align-items:center; justify-content:center; flex:1; min-width:180px;">
                 <div class="retangulo-autos" style="margin:0 auto; background: #02ee600c; color: #000000; position:static; min-width:160px; text-align:center;">N° Processo: <span id="valor-autos">-</span></div>
             </div>
-            <button type="button" class="imprimir-btn btn btn-success mb-3" id="btn-imprimir" onclick="window.print()">Imprimir</button>
+            <button type="button" class="imprimir-btn btn btn-success mb-3" id="btn-imprimir" onclick="window.print()" >Imprimir</button>
         </div>
         
         <!-- Retângulo 1: Total Rendimentos Mensais Líquidos -->
@@ -428,7 +448,7 @@
         </div>
     </div>
     <!-- Botão de tema pequeno e redondo -->
-    <button id="btn-theme-toggle" type="button" title="Alternar tema" style="position:fixed;top:10px;right:8px;width:36px;height:36px;border-radius:50%;background:#e0ffe0;border:none;box-shadow:0 2px 8px #0002;display:flex;align-items:center;justify-content:center;font-size:1.2em;z-index:2000;cursor:pointer;transition:background 0.2s;">
+    <button id="btn-theme-toggle" type="button" title="Alternar tema" style="position:fixed;top:13px;right:8px;width:36px;height:36px;border-radius:50%;background:#e0ffe0;border:none;box-shadow:0 2px 8px #0002;display:flex;align-items:center;justify-content:center;font-size:1.2em;z-index:2000;cursor:pointer;transition:background 0.2s;">
       🌙
     </button>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
