--- a/frontend/panorama.html
+++ b/frontend/panorama.html
@@ -367,12 +367,12 @@
         </div>
     </div>
     <div class="container"; style="background: #ffffff00;">
-        <div style="display:flex; align-items:flex-start; justify-content:space-between; margin-bottom:18px; margin-top:-10px; gap:16px;">
-            <h2 style="color: #2d5c2f;">PANORAMA MENSAL RESUMIDO</h2>
-            <div style="display:flex; flex-direction:column; align-items:center; justify-content:center; flex:1; min-width:180px;">
-                <div class="retangulo-autos" style="margin:0 auto; background: #02ee600c; color: #000000; position:static; min-width:160px; text-align:center;">N° Processo: <span id="valor-autos">-</span></div>
+        <div style="display:flex; align-items:center; justify-content:space-between; margin-bottom:30px; gap:16px;">
+            <h2 style="color: #2d5c2f; margin:0; text-align:left; flex:1; background:transparent !important;">PANORAMA MENSAL RESUMIDO</h2>
+            <div style="display:flex; gap:10px; align-items:center; min-width:180px;">
+                <div class="retangulo-autos" style="margin-right: 50px; background: #02ee600c; color: #000000; position:static; min-width:160px; text-align:center;">N° Processo: <span id="valor-autos">-</span></div>
+                <button type="button" class="imprimir-btn btn btn-success mb-3" id="btn-imprimir" onclick="window.print()">Imprimir</button>
             </div>
-            <button type="button" class="imprimir-btn btn btn-success mb-3" id="btn-imprimir" onclick="window.print()" >Imprimir</button>
         </div>
         
         <!-- Retângulo 1: Total Rendimentos Mensais Líquidos -->
