--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,8 +10,7 @@
             background: url('SuperEndBackgroundTransparente.png') no-repeat center center fixed;
             background-size: cover;
         }
-        .container { max-width: 1200px; margin: 30px auto; background: #fff; padding: 30px; border-radius: 8px; box-shadow: 0 2px 8px #0001; }
-        h1 { color: #2d5c2f; margin-bottom: 20px; }
+        .container { max-width: 1200px; margin: 30px auto; background: #ffffff00; padding: 30px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0, 248, 74, 0.263); }        h1 { color: #2d5c2f; margin-bottom: 20px; }
         table { font-size: 0.88rem; }
         th, td { padding: 0.3em 0.5em !important; }
         .table-bordered th, .table-bordered td { border: 1px solid #333 !important; }
@@ -160,6 +159,21 @@
                 padding: 0 !important;
             }
         }
+        .conteudo-escondido { visibility: hidden; }
+        #page-load-overlay {
+            position: fixed;
+            top: 0; left: 0; width: 100vw; height: 100vh;
+            background: #fff;
+            z-index: 99999;
+            transition: opacity 0.07s;
+        }
+        html.dark-theme #page-load-overlay, body.dark-theme #page-load-overlay {
+            background: #181a1b;
+        }
+        #page-load-overlay.hide {
+            opacity: 0;
+            pointer-events: none;
+        }
     </style>
     <style>
         table.dark-theme tr {
@@ -229,6 +243,12 @@
             }
         } catch(e){}
     </script>
+    <script>
+        // Garante que, se não houver tema salvo, o padrão será claro
+        if (!localStorage.getItem('theme')) {
+            localStorage.setItem('theme', 'light');
+        }
+    </script>
 </head>
 <body>
     <!--Barra de navegação superior-->
@@ -243,7 +263,7 @@
             </div>
         </div>
     </div>
-    <div class="container"; style="background: #ffffff00;">
+    <div class="container conteudo-escondido">
         <div style="display:flex; align-items:center; justify-content:space-between; margin-bottom:30px; gap:16px;">
             <h1 style="margin:0;">Dados Socioeconômicos do Consumidor</h1>
             <div style="display:flex; gap:10px; align-items:center;">
@@ -323,6 +343,8 @@
     <button id="btn-theme-toggle" type="button" title="Alternar tema" style="position:fixed;top:13px;right:8px;width:36px;height:36px;border-radius:50%;background:#e0ffe0;border:none;box-shadow:0 2px 8px #0002;display:flex;align-items:center;justify-content:center;font-size:1.2em;z-index:2000;cursor:pointer;transition:background 0.2s;">
       🌙
     </button>
+    <div id="page-load-overlay"></div>
+    <div id="page-transition-overlay" style="display:block;"></div>
     <script>
         function formatBRL(value) {
             return value.toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' });
@@ -466,11 +488,36 @@
         });
         // Adicionar função global:
         function navegarComTema(destino) {
-            const dark = document.documentElement.classList.contains('dark-theme');
-            localStorage.setItem('theme', dark ? 'dark' : 'light');
-            window.location.href = destino;
+            var overlay = document.getElementById('page-transition-overlay');
+            if (overlay) {
+                overlay.style.display = 'block';
+                overlay.classList.add('active');
+                setTimeout(function() {
+                    window.location.href = destino;
+                }, 350);
+            } else {
+                window.location.href = destino;
+            }
         }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        // Após atualizar os valores do localStorage (exemplo: no final da função que preenche os campos principais)
+        document.querySelectorAll('.conteudo-escondido').forEach(function(el) {
+            el.classList.remove('conteudo-escondido');
+        });
+        // Esconde o overlay de carregamento
+        var overlay = document.getElementById('page-load-overlay');
+        if (overlay) {
+            overlay.classList.add('hide');
+            setTimeout(function() { overlay.style.display = 'none'; }, 400);
+        }
+        // Após atualizar os valores e remover .conteudo-escondido
+        var overlay = document.getElementById('page-transition-overlay');
+        if (overlay) {
+            overlay.classList.remove('active');
+            setTimeout(function() { overlay.style.display = 'none'; }, 400);
+        }
+    </script>
 </body>
 </html> 
