--- a/frontend/panorama.html
+++ b/frontend/panorama.html
@@ -10,8 +10,7 @@
             background: url('SuperEndBackgroundTransparente.png') no-repeat center center fixed;
             background-size: cover;
         }
-        .container { max-width: 1200px; margin: 30px auto; background: #fff; padding: 30px; border-radius: 8px; box-shadow: 0 2px 8px #0001; }
-        .titulo-topo { font-size: 1.1em; font-weight: bold; text-align: center; }
+        .container { max-width: 1200px; margin: 30px auto; background: #ffffff00; padding: 30px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0, 248, 74, 0.263); }        .titulo-topo { font-size: 1.1em; font-weight: bold; text-align: center; }
         .panorama-title { color: #0074d9; font-weight: bold; font-size: 1.3em; text-align: center; margin: 20px 0 30px 0; }
         .retangulo { border: 2px solid #bbb; border-radius: 10px; margin-bottom: 18px; background: #f8f9fa; padding: 18px 18px 10px 18px; position: relative; }
         .retangulo-verde { background: #e6f9e6; border: 2px solid #7ed87e; }
@@ -32,7 +31,6 @@
         .retangulo-icone-emergencial { color: #ff9800; }
         .retangulo-pct-limite { color: #2e7d32; font-size: 1.5em; font-weight: bold; }
         .retangulo-valor-livre { color: #007a00; font-size: 1.3em; font-weight: bold; }
-        .retangulo-valor-neg { color: #d00; }
         .retangulo-valor-porcento { font-size: 1.1em; font-weight: bold; }
         .retangulo-valor-porcento-neg { color: #d00; font-size: 1.1em; font-weight: bold; }
         .retangulo-valor-porcento-verde { color: #2e7d32; font-size: 1.1em; font-weight: bold; }
@@ -270,6 +268,39 @@
             padding: 0 !important;
           }
         }
+        .conteudo-escondido { visibility: hidden; }
+        #page-load-overlay {
+          position: fixed;
+          top: 0; left: 0; width: 100vw; height: 100vh;
+          background: #fff;
+          z-index: 99999;
+          transition: opacity 0.3s;
+        }
+        html.dark-theme #page-load-overlay, body.dark-theme #page-load-overlay {
+          background: #181a1b;
+        }
+        #page-load-overlay.hide {
+          opacity: 0;
+          pointer-events: none;
+        }
+        #page-transition-overlay {
+          position: fixed;
+          top: 0; left: 0; width: 100vw; height: 100vh;
+          background: url('SuperEndBackgroundTransparente.png') no-repeat center center fixed;
+          background-size: cover;
+          z-index: 99999;
+          opacity: 0;
+          pointer-events: none;
+          transition: opacity 0.07s;
+        }
+        html.dark-theme #page-transition-overlay, body.dark-theme #page-transition-overlay {
+          background: url('SuperEndBackgroundTransparente-Dark.png') no-repeat center center fixed;
+          background-size: cover;
+        }
+        #page-transition-overlay.active {
+          opacity: 1;
+          pointer-events: all;
+        }
     </style>
     <style id="dark-theme-style" disabled>
       body.dark-theme {
@@ -366,7 +397,7 @@
             </div>
         </div>
     </div>
-    <div class="container"; style="background: #ffffff00;">
+    <div class="container conteudo-escondido" style="background: #ffffff00;">
         <div style="display:flex; align-items:center; justify-content:space-between; margin-bottom:30px; gap:16px;">
             <h2 style="color: #2d5c2f; margin:0; text-align:left; flex:1; background:transparent !important;">PANORAMA MENSAL RESUMIDO</h2>
             <div style="display:flex; gap:10px; align-items:center; min-width:180px;">
@@ -451,6 +482,8 @@
     <button id="btn-theme-toggle" type="button" title="Alternar tema" style="position:fixed;top:13px;right:8px;width:36px;height:36px;border-radius:50%;background:#e0ffe0;border:none;box-shadow:0 2px 8px #0002;display:flex;align-items:center;justify-content:center;font-size:1.2em;z-index:2000;cursor:pointer;transition:background 0.2s;">
       🌙
     </button>
+    <div id="page-load-overlay"></div>
+    <div id="page-transition-overlay" style="display:block;"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
     // Função para formatar valores em BRL
@@ -562,6 +595,17 @@
         document.getElementById('valor-renda-sem-consignados').textContent = formatBRL(valorRendaSemConsignados);
         document.getElementById('valor-consignacao-emergencial').textContent = formatBRL(valorConsignacaoEmergencial);
         document.getElementById('valor-livre-emergencial').textContent = formatBRL(valorLivreEmergencial);
+
+        // Exibe o conteúdo após atualizar os valores
+        document.querySelectorAll('.conteudo-escondido').forEach(function(el) {
+            el.classList.remove('conteudo-escondido');
+        });
+        // Esconde o overlay de carregamento
+        var overlay = document.getElementById('page-load-overlay');
+        if (overlay) {
+            overlay.classList.add('hide');
+            setTimeout(function() { overlay.style.display = 'none'; }, 400);
+        }
     }
     window.onload = atualizarPanorama;
 
@@ -654,9 +698,16 @@
 
     // Adicionar função global:
     function navegarComTema(destino) {
-        const dark = document.documentElement.classList.contains('dark-theme');
-        localStorage.setItem('theme', dark ? 'dark' : 'light');
-        window.location.href = destino;
+        var overlay = document.getElementById('page-transition-overlay');
+        if (overlay) {
+            overlay.style.display = 'block';
+            overlay.classList.add('active');
+            setTimeout(function() {
+                window.location.href = destino;
+            }, 350);
+        } else {
+            window.location.href = destino;
+        }
     }
     </script>
 </body>
