--- a/frontend/index.html
+++ b/frontend/index.html
@@ -159,6 +159,11 @@
                 padding: 0 !important;
             }
         }
+        @media print {
+            @page {
+                size: A4 landscape;
+            }
+        }
         .conteudo-escondido { visibility: hidden; }
         #page-load-overlay {
             position: fixed;
