--- a/frontend/plano-de-pagamento.html
+++ b/frontend/plano-de-pagamento.html
@@ -209,6 +209,9 @@
                 border-radius: 0 !important;
                 padding: 0 !important;
             }
+            @page {
+                size: A4 landscape;
+            }
         }
         html.dark-theme input[type="date"],
         body.dark-theme input[type="date"] {
