--- a/frontend/geral.html
+++ b/frontend/geral.html
@@ -269,6 +269,9 @@
                 border-radius: 0 !important;
                 padding: 0 !important;
             }
+            @page {
+                size: A4 landscape;
+            }
         }
         html.dark-theme input#nome-consumidor,
         body.dark-theme input#nome-consumidor,
