--- a/frontend/panorama.html
+++ b/frontend/panorama.html
@@ -267,6 +267,9 @@
             border-radius: 0 !important;
             padding: 0 !important;
           }
+          @page {
+            size: A4 landscape;
+          }
         }
         .conteudo-escondido { visibility: hidden; }
         #page-load-overlay {
